<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_goto_message_mechanism"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/message_queue_test" />

            <Button
                android:id="@+id/btn_goto_memory_leak"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lab_memory_leak" />

            <Button
                android:id="@+id/btn_goto_active_android_test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lab_active_android" />

            <Button
                android:id="@+id/btn_goto_wifip2p_test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lab_wifip2p" />

            <Button
                android:id="@+id/btn_goto_lan_test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lab_lan" />

            <Button
                android:id="@+id/btn_goto_lan_live_test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lab_lan_live" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
